aria2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aria2
  namespace: default
spec:
  rules:
  - host: aria2.foo.org
    http: 
      paths:
      - path: /
        backend:
          serviceName: aria2
          servicePort: 80
      - path: /rpc
        backend:
          serviceName: aria2
          servicePort: 6800
